# junqi

./: Cargo.toml  实验报告.md
crates/junqi-ai/: Cargo.toml
crates/junqi-ai/src/: difficulty.rs  eval.rs  lib.rs  mcts.rs  search.rs
crates/junqi-app/: Cargo.toml
crates/junqi-app/src/: app.rs  main.rs
crates/junqi-app/src/screens/: deploy_screen.rs  game_screen.rs  layout_editor.rs  main_menu.rs  mod.rs  replay_viewer.rs  room_lobby.rs  settings_screen.rs
crates/junqi-app/src/widgets/: board_widget.rs  mod.rs
crates/junqi-core/: Cargo.toml
crates/junqi-core/src/: board.rs  game.rs  layout.rs  lib.rs  moves.rs  piece.rs  replay.rs  types.rs
crates/junqi-net/: Cargo.toml
crates/junqi-net/src/: client.rs  lib.rs  protocol.rs  room.rs  sync.rs
crates/junqi-rendezvous/: Cargo.toml
crates/junqi-rendezvous/src/: main.rs
crates/junqi-storage/: Cargo.toml
crates/junqi-storage/src/: layout_store.rs  lib.rs  replay_store.rs  settings.rs
