[package]
name = "junqi-rendezvous"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "军棋 P2P Rendezvous 打洞服务器——轻量 UDP 房间注册与查询"

[dependencies]
junqi-core = { path = "../junqi-core" }
junqi-net = { path = "../junqi-net" }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
